cmake_minimum_required(VERSION 3.26)
project(LeetCode)

set(CMAKE_CXX_STANDARD 20)

add_executable(LeetCode
#        q88.cpp
#        q125.cpp
#        q209.cpp
#        q209-2.cpp
#        q36.cpp
#        q383.cpp
#        q228.cpp
#        q202.cpp
#        q20.cpp
#        q141.cpp
#        q104.cpp
#        q100.cpp
#        q226.cpp
#        q21.cpp
#        q199.cpp
#        q94.cpp
#        q530,783.cpp
#        q200.cpp
#        q909.cpp
#        q17.cpp
#        q108.cpp
#        q53.cpp
#        q35.cpp
#        q215.cpp
#        q67.cpp
#        q9.cpp
#        q70.cpp
#        q120.cpp
#        q704.cpp
        q27.cpp
)
